<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="hn.tictanes.tegchos.IngresoSolicitud$PlaceholderFragment">

    <EditText android:text="@string/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        />
    <EditText
        android:text="@string/etTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTelefono"
        />
    <EditText
        android:text="@string/etCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etCorreo"
        />

</LinearLayout>
