<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="0dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblSeleccione"
                />
            <Button
                android:id="@+id/btnTomarFoto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnTomarFoto" />
            <Button
                android:id="@+id/btnSeleccionarGaleria"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSeleccionarGalaria" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>